Minor bugfixes and no-js version

--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -2,7 +2,7 @@
 layout: page
 title: CV
 permalink: /curriculum-vitae/
----		
+---
 	<nav class="jump-menu">
 		<ul>
 			<li><a href="#over-michele"><span>Over Michèle</span></a></li>
@@ -11,7 +11,7 @@ permalink: /curriculum-vitae/
 			<li><a href="#opleiding"><span>Opleiding</span></a></li>
 			<li><a href="#cursussen-workshops"><span>Cursussen</span></a></li>
 		</ul>
-	</nav>	
+	</nav>
 	<main>
 		<section class="cv-section row block-item about" id="over-michele" itemscope itemtype="http://schema.org/Person">
 			<header class="block-item-img col" style="background-image: url('/assets/images/michele-van-den-aardweg.jpg');">
@@ -39,7 +39,7 @@ permalink: /curriculum-vitae/
 								</g>
 							</svg>
 						</a>
-					</li>	
+					</li>
 					<li class="github">
 						<a href="https://github.com/michelenl" title="GitHub" aria-label="Ga naar het GitHub profiel van Michèle">
 							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="512" height="512" viewBox="0 0 475.1 475.1" xml:space="preserve">
@@ -53,7 +53,7 @@ permalink: /curriculum-vitae/
 								<path d="M16.877 0.415c-0.854-0.565-1.967-0.552-2.809 0.034L1.485 9.214c-0.671 0.468-1.071 1.233-1.071 2.052v9.443c0 0.84 0.421 1.623 1.122 2.086l12.79 8.455c0.836 0.554 1.922 0.554 2.758 0l13.043-8.617c0.701-0.463 1.123-1.246 1.123-2.086v-9.279c0-0.839-0.422-1.622-1.121-2.085L16.877 0.415zM26.622 10.645l-4.822 3.237 -4.521-3.288L17.25 4.127 26.622 10.645zM13.979 4.133v6.329l-4.633 3.24 -4.621-3.099L13.979 4.133zM3.458 13.722l2.991 2.004 -2.991 2.093V13.722zM14.058 27.215l-9.331-6.258L9.388 17.7l4.67 3.133V27.215zM12.286 15.674l3.021-2.113 3.52 2.313 -3.12 2.095L12.286 15.674zM17.354 27.215v-6.385l4.463-2.992 4.805 3.16L17.354 27.215zM27.954 17.926l-3.168-2.082 3.168-2.125V17.926z"/>
 							</svg>
 						</a>
-					</li>		
+					</li>
 				</ul>
 			</div>
 		</section>
@@ -91,7 +91,17 @@ permalink: /curriculum-vitae/
 			</header>
 			<dl class="timeline timeline-experience col">
 				<dt>
-					2007 - heden
+					2016 - heden
+				</dt>
+				<dd>
+					<article>
+						<h3>Front-end developer </h3>
+						<p>Grrr</p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>
+				</dd>
+				<dt>
+					2007 - 2016
 				</dt>
 				<dd>
 					<article>
@@ -100,12 +110,12 @@ permalink: /curriculum-vitae/
 					</article>
 					<span aria-hidden="true" class="time-dot"></span>
 				</dd>
-				<dt>			
-					2015 - heden
+				<dt>
+					2015 - 2016
 				</dt>
 				<dd>
 					<article>
-						<h3>Gastdocent  Communication &amp; Multimedia Design</h3>
+						<h3>Gastdocent Communication &amp; Multimedia Design</h3>
 						<p>Hogeschool van Amsterdam</p>
 					</article>
 					<span aria-hidden="true" class="time-dot"></span>
@@ -114,7 +124,7 @@ permalink: /curriculum-vitae/
 						2010 - 2011
 				</dt>
 				<dd>
-					<article>	
+					<article>
 						<h3>Blogger</h3>
 						<p>Lacquerized.com</p>
 					</article>
@@ -130,7 +140,7 @@ permalink: /curriculum-vitae/
 					</article>
 					<span aria-hidden="true" class="time-dot"></span>
 				</dd>
-				<dt>			
+				<dt>
 					2010
 				</dt>
 				<dd>
@@ -198,7 +208,7 @@ permalink: /curriculum-vitae/
 				<dd>
 					<article>
 						<h3>Webrichtlijnen voor front-enders</h3>
-						<p>  door Jules Ernst / Fronteers</p>
+						<p> door Jules Ernst / Fronteers</p>
 					</article>
 					<span aria-hidden="true" class="time-dot"></span>
 				</dd>
@@ -224,7 +234,7 @@ permalink: /curriculum-vitae/
 						<h3> jQuery Inception</h3>
 						<p>JavaScript en jQuery, door Arjan Eising / Fronteers</p>
 					</article>
-					<span aria-hidden="true" class="time-dot"></span>	
+					<span aria-hidden="true" class="time-dot"></span>
 				</dd>
 			</dl>
 		</section>
@@ -234,7 +244,7 @@ permalink: /curriculum-vitae/
 				<blockquote>
 					<p>"Simplicity is the keynote of all true elegance."</p>
 					<footer>Coco Chanel</footer>
-				</blockquote>	
+				</blockquote>
 				<blockquote>
 					<p>"Be yourself. Everyone else is already taken."</p>
 					<footer> Oscar Wilde</footer>
