--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ layout: default
 				<h1>Hey,<br>hi &amp; hello.</h1>
 			</header>
 			<div class="col">
-				<p>Ik ben <strong>Michèle van den Aardweg</strong> en ik houd van gebruiksvriendelijke en mooie websites. In 2007 ben ik dan ook als <strong>front-end web developer</strong> aan de slag gegaan bij <strong>Occhio</strong>, onwijs leuk web bureau gevestigd in Amsterdam.  </p>
+				<p>Ik ben <strong>Michèle van den Aardweg</strong> en ik houd van gebruiksvriendelijke en mooie websites. In 2007 ben ik dan ook als <strong>front-end web developer</strong> aan de slag gegaan bij <strong>Grrr</strong>, onwijs leuk web bureau gevestigd in Amsterdam.  </p>
 			</div>
 		</article>
-		<section class="row"> 
+		<section class="row">
 			<div class="col">
 				<p class="beta">inmiddels...</p>
 				<p>Heb ik als front-end developer veel ervaring met het vertalen van ontwerpen naar <strong>mooie</strong>, <strong>snelle</strong> &amp; toegankelijke websites.</p>
@@ -23,14 +23,13 @@ layout: default
 				<p>Binnen het vakgebied ben ik een wandelend cliché: ik houd van lekkere koffie én katten. Gelukkig ben ik geen <em>ninja</em>, of een <em>unicorn</em>.</p>
 				<h2 class="gamma">En verder?</h2>
 				<p>Verder ben ik gek op Scandinavische detectives, spekkoek, concerten, vegetarisch voedsel, onze kat <a href="https://www.instagram.com/p/BFPPT1OtpQ_/">Saai</a>, speuren naar vintage meubels, horror- en arthouse films, een lekker potje metal en <em>Monkey Island™</em>.</p>
-				<a href="/werk/" role="button">Bekijk Werk</a>
 				<a href="/curriculum-vitae/" role="button">Bekijk CV</a>
 			</div>
 		</section>
 	</main>
 	<section class="instagram-feed">
 		<header>
-			<div class="front">		
+			<div class="front">
 				<h3 class="beta">Instagram</h3>
 			</div>
 			<div class="back">
