Different order loading Modernizr

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 				<h1>Hey,<br>hi &amp; hello.</h1>
 			</header>
 			<div class="col">
-				<p>Ik ben <strong>Michèle van den Aardweg</strong> en ik houd van gebruiksvriendelijke en mooie websites. In 2007 ben ik dan ook als <strong>front-end web developer</strong> aan de slag gegaan bij <strong>Grrr</strong>, onwijs leuk web bureau gevestigd in Amsterdam.  </p>
+				<p>Ik ben <strong>Michèle van den Aardweg</strong> en ik houd van gebruiksvriendelijke en mooie websites. In 2007 ben ik dan ook als <strong>front-end web developer</strong> aan de slag gegaan bij <strong>Grrr</strong>, creatief digitaal bureau gevestigd in Amsterdam.  </p>
 			</div>
 		</article>
 		<section class="instagram-feed">
