--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ layout: default
 				<h1>Hey,<br>hi &amp; hello.</h1>
 			</header>
 			<div class="col">
-				<p>Ik ben <strong>Michèle van den Aardweg</strong> en ik houd van gebruiksvriendelijke en mooie websites. In 2007 ben ik dan ook als <strong>front-end web developer</strong> aan de slag gegaan bij <strong>Grrr</strong>, creatief digitaal bureau gevestigd in Amsterdam.  </p>
+				<p>Ik ben <strong>Michèle van den Aardweg</strong> en ik houd van gebruiksvriendelijke en mooie websites. Daarom ben ik dan ook met veel enthousiasme als <strong>front-end web developer</strong> aan de slag gegaan</p>
+				<p>Eerst bij <a href="https://www.occhio.nl">Occhio</a> en sinds de zomer van 2016 bij <strong><a href="https://www.grrr.nl">Grrr</a></strong>, onwijs tof creatief digitaal bureau in Amsterdam.  </p>
 			</div>
 		</article>
 		<section class="instagram-feed">
