Add spring update 2018

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 title: Front-end developer, Amsterdam & Utrecht
 layout: default
 ---
-	<main class="about">
+	<main class="page--about" role="document">
 		<article class="block-introduction row">
 			<header class="col">
-				<h1>Hey,<br>hi &amp; hello.</h1>
+				<h1>Hey, hi &amp; hello.</h1>
 			</header>
 			<div class="col">
-				<p>Ik ben <strong>Michèle van den Aardweg</strong> en ik houd van gebruiksvriendelijke en mooie websites. Daarom ben ik dan ook met veel enthousiasme als <strong>front-end web developer</strong> aan de slag gegaan</p>
-				<p>Eerst bij <a href="https://www.occhio.nl">Occhio</a> en sinds de zomer van 2016 bij <strong><a href="https://www.grrr.nl">Grrr</a></strong>, onwijs tof creatief digitaal bureau in Amsterdam.  </p>
+				<p>Ik ben <strong>Michèle van den Aardweg</strong> en ik houd van gebruiksvriendelijke en mooie websites. Daarom ben ik dan ook met veel enthousiasme als <strong>front-end developer</strong> aan de slag gegaan.</p>
+				<p>Eerst 9 jaar bij Occhio en sinds de zomer van 2016 bij <strong><a href="https://www.grrr.nl">Grrr</a></strong>, onwijs tof creatief digitaal bureau in Amsterdam.  </p>
 			</div>
 		</article>
 		<section class="instagram-feed">
@@ -30,7 +30,7 @@ layout: default
 	</section>
 		<section class="row">
 			<div class="col">
-				<p class="beta">inmiddels...</p>
+				<p class="beta">Inmiddels...</p>
 				<p>Heb ik als front-end developer veel ervaring met het vertalen van ontwerpen naar <strong>mooie</strong>, <strong>snelle</strong> &amp; toegankelijke websites.</p>
 				<p>Nadenken over hoe <strong>responsive</strong> sites horen te werken en het toevoegen van <em>CSS animaties &amp; transities</em>, vind ik het leukst om te doen.</p>
 
