--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -3,7 +3,7 @@ layout: page
 title: CV
 permalink: /curriculum-vitae/
 ---
-	<main>
+	<main role="document">
 		<section class="cv-section row block-item about" id="over-michele" itemscope itemtype="http://schema.org/Person">
 			<header class="block-item-img col" style="background-image: url('/assets/images/michele-van-den-aardweg.jpg');">
 		  		<h1 class="beta">Curriculum Vitae</h1>
@@ -16,33 +16,25 @@ permalink: /curriculum-vitae/
 					<dd itemprop="birthDate">1 maart 1984</dd>
 					<dt>Woonplaats</dt>
 					<dd itemprop="homeLocation">Utrecht, Nederland</dd>
-					<dt>Telefoon</dt>
-					<dd itemprop="telephone">06 - 28 56 47 09  </dd>
 					<dt>Email</dt>
-					<dd><a itemprop="email" href="mailto:michele.vd.aardweg@gmail.com">michele.vd.aardweg@gmail.com</a></dd>
+					<dd>
+						<a itemprop="email" href="mailto:michele.vd.aardweg@gmail.com">michele.vd.aardweg@gmail.com</a>
+					</dd>
 				</dl>
 				<ul class="social-media-list">
 					<li>
 						<a href="https://www.linkedin.com/in/michelevdaardweg" title="LinkedIn" aria-label="Ga naar het LinkedIn profiel van Michèle">
-							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="" height="" viewBox="0 4.559 430.117 416.002" enable-background="new 0 4.559 430.117 416.002" xml:space="preserve">
-								<g>
-									<path id="LinkedIn" d="M430.117 261.543v159.018h-92.188V272.193c0-37.271-13.334-62.708-46.703-62.708 -25.474 0-40.632 17.142-47.302 33.724 -2.432 5.929-3.058 14.179-3.058 22.478v154.873h-92.219c0 0 1.242-251.286 0-277.32h92.21v39.309c-0.188 0.294-0.43 0.611-0.606 0.896h0.606v-0.896c12.251-18.869 34.13-45.824 83.103-45.824C384.634 136.724 430.117 176.361 430.117 261.543zM52.183 9.558C20.635 9.558 0 30.251 0 57.463c0 26.619 20.038 47.94 50.959 47.94h0.616c32.159 0 52.159-21.317 52.159-47.94C103.128 30.251 83.734 9.558 52.183 9.558zM5.477 420.561h92.184V143.24H5.477V420.561z"/>
-								</g>
-							</svg>
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 4.559 430.117 416.002"><path d="M430.117 261.543v159.018h-92.188V272.193c0-37.271-13.334-62.708-46.703-62.708-25.474 0-40.632 17.142-47.302 33.724-2.432 5.929-3.058 14.179-3.058 22.478V420.56h-92.219s1.242-251.286 0-277.32h92.21v39.309c-.188.294-.43.611-.606.896h.606v-.896c12.251-18.869 34.13-45.824 83.103-45.824 60.674-.001 106.157 39.636 106.157 124.818zM52.183 9.558C20.635 9.558 0 30.251 0 57.463c0 26.619 20.038 47.94 50.959 47.94h.616c32.159 0 52.159-21.317 52.159-47.94-.606-27.212-20-47.905-51.551-47.905zM5.477 420.561h92.184V143.24H5.477v277.321z"/></svg>
 						</a>
 					</li>
 					<li class="github">
-						<a href="https://github.com/michelenl" title="GitHub" aria-label="Ga naar het GitHub profiel van Michèle">
-							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="512" height="512" viewBox="0 0 475.1 475.1" xml:space="preserve">
-								<path d="M436.2 146.8c5.1-15.4 7.7-31.4 7.7-48 0-22.1-4.9-42.8-14.6-62.2 -20.4 0-38.3 3.7-54 11.1 -15.6 7.4-33.4 18.9-53.4 34.5 -25.1-6.1-51.8-9.1-79.9-9.1 -30.8 0-60.2 3.3-88.2 10 -20.4-16-38.4-27.7-54-35.3 -15.6-7.5-33.7-11.3-54.2-11.3 -9.7 19.4-14.6 40.2-14.6 62.2 0 16.8 2.6 32.9 7.7 48.5C12.9 177.6 0 215.3 0 260.4c0 39.6 5.9 71.1 17.7 94.5 6.3 12.4 14.5 23.3 24.6 32.8 10.1 9.5 21.6 17.2 34.5 23.1 12.9 5.9 26 10.8 39.1 14.7 13.1 3.9 27.6 6.8 43.5 8.6 15.9 1.8 29.9 3 42.1 3.6 12.2 0.6 25.7 0.9 40.5 0.9 17.5 0 33.4-0.4 47.7-1.3 14.3-0.9 30.6-3 49-6.3 18.4-3.3 34.5-7.9 48.5-13.6 14-5.7 27.4-13.9 40.3-24.6 12.8-10.7 22.9-23.3 30.1-38 11.6-23.6 17.4-55.1 17.4-94.5C475.1 215.1 462.1 177.2 436.2 146.8zM402 354.5c-6.1 12.5-13.8 22.3-23.1 29.4 -9.3 7.1-20.9 12.8-34.8 17.1 -13.9 4.3-27.2 7.1-40 8.4 -12.8 1.3-26.9 2-42.5 2h-48c-15.6 0-29.8-0.7-42.5-2 -12.8-1.3-26.1-4.1-40-8.4 -13.9-4.3-25.5-10-34.8-17.1 -9.3-7.1-17-16.9-23.1-29.4 -6.1-12.5-9.1-27.1-9.1-43.8 0-22.8 6.6-42.3 19.7-58.2 13.1-16 30.9-24 53.4-24 8.2 0 26.7 2 55.7 6 13.5 2.1 28.5 3.1 44.8 3.1 16.4 0 31.3-1 44.8-3.1 29.3-4 47.9-6 55.7-6 22.5 0 40.3 8 53.4 24 13.1 16 19.7 35.4 19.7 58.2C411.1 327.4 408.1 342 402 354.5zM166.9 265.5c-5.8-6.5-12.7-9.7-20.7-9.7 -8 0-14.9 3.2-20.7 9.7 -5.8 6.5-9.9 13.7-12.3 21.7 -2.4 8-3.6 15.8-3.6 23.4 0 7.6 1.2 15.4 3.6 23.4 2.4 8 6.5 15.2 12.3 21.7 5.8 6.5 12.7 9.7 20.7 9.7 8 0 14.9-3.2 20.7-9.7 5.8-6.5 9.9-13.7 12.3-21.7 2.4-8 3.6-15.8 3.6-23.4 0-7.6-1.2-15.4-3.6-23.4C176.8 279.2 172.7 272 166.9 265.5zM349.6 265.5c-5.8-6.5-12.7-9.7-20.7-9.7 -8 0-14.9 3.2-20.7 9.7 -5.8 6.5-9.9 13.7-12.3 21.7 -2.4 8-3.6 15.8-3.6 23.4 0 7.6 1.2 15.4 3.6 23.4 2.4 8 6.5 15.2 12.3 21.7 5.8 6.5 12.7 9.7 20.7 9.7 8 0 14.9-3.2 20.7-9.7 5.8-6.5 9.9-13.7 12.3-21.7 2.4-8 3.6-15.8 3.6-23.4 0-7.6-1.2-15.4-3.6-23.4C359.5 279.2 355.4 272 349.6 265.5z"/>
-							</svg>
+						<a href="https://github.com/michelenl" title="GitHub" aria-label="GitHub profiel van Michèle">
+							<svg xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 475.1 475.1"><path d="M436.2 146.8c5.1-15.4 7.7-31.4 7.7-48 0-22.1-4.9-42.8-14.6-62.2-20.4 0-38.3 3.7-54 11.1-15.6 7.4-33.4 18.9-53.4 34.5-25.1-6.1-51.8-9.1-79.9-9.1-30.8 0-60.2 3.3-88.2 10-20.4-16-38.4-27.7-54-35.3-15.6-7.5-33.7-11.3-54.2-11.3C35.9 55.9 31 76.7 31 98.7c0 16.8 2.6 32.9 7.7 48.5C12.9 177.6 0 215.3 0 260.4c0 39.6 5.9 71.1 17.7 94.5 6.3 12.4 14.5 23.3 24.6 32.8 10.1 9.5 21.6 17.2 34.5 23.1 12.9 5.9 26 10.8 39.1 14.7 13.1 3.9 27.6 6.8 43.5 8.6 15.9 1.8 29.9 3 42.1 3.6 12.2.6 25.7.9 40.5.9 17.5 0 33.4-.4 47.7-1.3 14.3-.9 30.6-3 49-6.3s34.5-7.9 48.5-13.6c14-5.7 27.4-13.9 40.3-24.6 12.8-10.7 22.9-23.3 30.1-38 11.6-23.6 17.4-55.1 17.4-94.5.1-45.2-12.9-83.1-38.8-113.5zM402 354.5c-6.1 12.5-13.8 22.3-23.1 29.4-9.3 7.1-20.9 12.8-34.8 17.1-13.9 4.3-27.2 7.1-40 8.4-12.8 1.3-26.9 2-42.5 2h-48c-15.6 0-29.8-.7-42.5-2-12.8-1.3-26.1-4.1-40-8.4-13.9-4.3-25.5-10-34.8-17.1-9.3-7.1-17-16.9-23.1-29.4-6.1-12.5-9.1-27.1-9.1-43.8 0-22.8 6.6-42.3 19.7-58.2 13.1-16 30.9-24 53.4-24 8.2 0 26.7 2 55.7 6 13.5 2.1 28.5 3.1 44.8 3.1 16.4 0 31.3-1 44.8-3.1 29.3-4 47.9-6 55.7-6 22.5 0 40.3 8 53.4 24 13.1 16 19.7 35.4 19.7 58.2-.2 16.7-3.2 31.3-9.3 43.8zm-235.1-89c-5.8-6.5-12.7-9.7-20.7-9.7s-14.9 3.2-20.7 9.7c-5.8 6.5-9.9 13.7-12.3 21.7-2.4 8-3.6 15.8-3.6 23.4 0 7.6 1.2 15.4 3.6 23.4 2.4 8 6.5 15.2 12.3 21.7 5.8 6.5 12.7 9.7 20.7 9.7s14.9-3.2 20.7-9.7c5.8-6.5 9.9-13.7 12.3-21.7 2.4-8 3.6-15.8 3.6-23.4 0-7.6-1.2-15.4-3.6-23.4-2.4-8-6.5-15.2-12.3-21.7zm182.7 0c-5.8-6.5-12.7-9.7-20.7-9.7s-14.9 3.2-20.7 9.7c-5.8 6.5-9.9 13.7-12.3 21.7-2.4 8-3.6 15.8-3.6 23.4 0 7.6 1.2 15.4 3.6 23.4 2.4 8 6.5 15.2 12.3 21.7 5.8 6.5 12.7 9.7 20.7 9.7s14.9-3.2 20.7-9.7c5.8-6.5 9.9-13.7 12.3-21.7 2.4-8 3.6-15.8 3.6-23.4 0-7.6-1.2-15.4-3.6-23.4-2.4-8-6.5-15.2-12.3-21.7z"/></svg>
 						</a>
 					</li>
 					<li class="codepen">
-						<a href="http://www.codepen.io/michelenl/" title="CodePen" aria-label="Ga naar het CodePen profiel van Michèle">
-							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="" height="" viewBox="0 0 31.665 31.665" enable-background="new 0 0 31.665 31.665" xml:space="preserve">
-								<path d="M16.877 0.415c-0.854-0.565-1.967-0.552-2.809 0.034L1.485 9.214c-0.671 0.468-1.071 1.233-1.071 2.052v9.443c0 0.84 0.421 1.623 1.122 2.086l12.79 8.455c0.836 0.554 1.922 0.554 2.758 0l13.043-8.617c0.701-0.463 1.123-1.246 1.123-2.086v-9.279c0-0.839-0.422-1.622-1.121-2.085L16.877 0.415zM26.622 10.645l-4.822 3.237 -4.521-3.288L17.25 4.127 26.622 10.645zM13.979 4.133v6.329l-4.633 3.24 -4.621-3.099L13.979 4.133zM3.458 13.722l2.991 2.004 -2.991 2.093V13.722zM14.058 27.215l-9.331-6.258L9.388 17.7l4.67 3.133V27.215zM12.286 15.674l3.021-2.113 3.52 2.313 -3.12 2.095L12.286 15.674zM17.354 27.215v-6.385l4.463-2.992 4.805 3.16L17.354 27.215zM27.954 17.926l-3.168-2.082 3.168-2.125V17.926z"/>
-							</svg>
+						<a href="http://www.codepen.io/michelenl/" title="CodePen" aria-label="CodePen profiel van Michèle">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.665 31.665"><path d="M16.877.415a2.501 2.501 0 0 0-2.809.034L1.485 9.214a2.5 2.5 0 0 0-1.071 2.052v9.443c0 .84.421 1.623 1.122 2.086l12.79 8.455a2.496 2.496 0 0 0 2.758 0l13.043-8.617a2.5 2.5 0 0 0 1.123-2.086v-9.279c0-.839-.422-1.622-1.121-2.085L16.877.415zm9.745 10.23L21.8 13.882l-4.521-3.288-.029-6.467 9.372 6.518zM13.979 4.133v6.329l-4.633 3.24-4.621-3.099 9.254-6.47zM3.458 13.722l2.991 2.004-2.991 2.093v-4.097zm10.6 13.493l-9.331-6.258L9.388 17.7l4.67 3.133v6.382zm-1.772-11.541l3.021-2.113 3.52 2.313-3.12 2.095-3.421-2.295zm5.068 11.541V20.83l4.463-2.992 4.805 3.16-9.268 6.217zm10.6-9.289l-3.168-2.082 3.168-2.125v4.207z"/></svg>
 						</a>
 					</li>
 				</ul>
@@ -56,23 +48,19 @@ permalink: /curriculum-vitae/
 				<h3>Creative front-end developer</h3>
 				<section class="skill-code">
 					<h4>Code</h4>
-					<p>XHTML1, HTML5, CSS2 &amp; 3, Sass, Less, Compass, jQuery, Liquid, Smarty</p>
+					<p>XHTML1, HTML5, CSS2 &amp; 3, Sass, <del>Less</del>, <del>Compass</del>, JavaScript, <del>jQuery</del>, Twig, Liquid, Smarty</p>
 				</section>
 				<section class="skill-cms">
 					<h4>CMS</h4>
-					<p>WordPress, Drupal, PrestaShop</p>
+					<p>WordPress, OctoberCMS, Drupal, PrestaShop</p>
 				</section>
 				<section class="skill-software">
 					<h4>Programma's</h4>
-					<p>Photoshop, Sketch, Sublime Text</p>
+					<p>VSCode, Sublime Text, Sketch, Photoshop</p>
 				</section>
 				<section class="skill-method">
 					<h4>Methodiek</h4>
-					<p>Agile, Scrum, Git, Gulp, Grunt, WCAG, Webrichtlijnen, Schema.org,  Responsive design</p>
-				</section>
-				<section class="skill-framework">
-					<h4>Frameworks</h4>
-					<p>Jekyll, Bootstrap</p>
+					<p>WCAG2, Webrichtlijnen, Git, Gulp, <del>Grunt</del>, Schema.org, Responsive design,  Agile, Scrum</p>
 				</section>
 			</div>
 		</section>
@@ -86,7 +74,7 @@ permalink: /curriculum-vitae/
 				</dt>
 				<dd>
 					<article>
-						<h3>Front-end developer </h3>
+						<h3>Sr. front-end developer </h3>
 						<p>Grrr</p>
 					</article>
 					<span aria-hidden="true" class="time-dot"></span>
@@ -96,7 +84,7 @@ permalink: /curriculum-vitae/
 				</dt>
 				<dd>
 					<article>
-						<h3>Senior front-end developer </h3>
+						<h3>Sr. front-end developer </h3>
 						<p>Occhio BV</p>
 					</article>
 					<span aria-hidden="true" class="time-dot"></span>
@@ -171,6 +159,14 @@ permalink: /curriculum-vitae/
 				<h2>Cursussen &amp; workshops</h2>
 			</header>
 			<dl class="timeline col">
+				<dt>2018</dt>
+				<dd>
+					<article>
+						<h3>Digitale toegankelijkheid</h3>
+						<p> door Jules Ernst / Fronteers</p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>
+				</dd>
 				<dt>2016</dt>
 				<dd>
 					<article>
